--- a/bigbluebutton-html5/private/locales/zh_CN.json
+++ b/bigbluebutton-html5/private/locales/zh_CN.json
@@ -37,11 +37,13 @@
     "app.userList.menu.muteUserAudio.label": "静音",
     "app.userList.menu.unmuteUserAudio.label": "取消静音",
     "app.userList.userAriaLabel": "{0}{1}{2}状态{3}",
+    "app.userList.menu.promoteUser.label": "提升为主持人",
+    "app.userList.menu.demoteUser.label": "降为普通参会者",
     "app.media.label": "媒体",
     "app.media.screenshare.start": "屏幕分享已开始",
     "app.media.screenshare.end": "屏幕分享已结束",
     "app.media.screenshare.safariNotSupported": "Safari浏览器现在还不支持屏幕分享，请换用Firefox或Chrome浏览器。",
-    "app.meeting.ended": "此会话已结束",
+    "app.meeting.ended": "此会议已结束",
     "app.meeting.endedMessage": "您将被跳转回首页",
     "app.presentation.presentationToolbar.prevSlideLabel": "上一页",
     "app.presentation.presentationToolbar.prevSlideDesc": "将幻灯片切换到上一页",
@@ -52,7 +54,7 @@
     "app.presentation.presentationToolbar.fitWidthLabel": "适配宽度",
     "app.presentation.presentationToolbar.fitWidthDesc": "幻灯片的宽度方向完整显示",
     "app.presentation.presentationToolbar.fitScreenLabel": "适配屏幕",
-    "app.presentation.presentationToolbar.fitScreenDesc": "整个幻灯片在屏幕里完整显示",
+    "app.presentation.presentationToolbar.fitScreenDesc": "在屏幕里完整显示幻灯片",
     "app.presentation.presentationToolbar.zoomLabel": "缩放",
     "app.presentation.presentationToolbar.zoomDesc": "更改演示区的缩放级别",
     "app.presentation.presentationToolbar.goToSlide": "幻灯片{0}",
@@ -63,11 +65,14 @@
     "app.presentationUploder.dismissLabel": "取消",
     "app.presentationUploder.dismissDesc": "关闭窗口并丢弃更改",
     "app.presentationUploder.dropzoneLabel": "拖放文件到此以上传",
+    "app.presentationUploder.dropzoneImagesLabel": "拖放图片到此以上传",
     "app.presentationUploder.browseFilesLabel": "或浏览文件",
+    "app.presentationUploder.browseImagesLabel": "或拍摄浏览图片",
     "app.presentationUploder.fileToUpload": "将被上传...",
     "app.presentationUploder.currentBadge": "当前",
     "app.presentationUploder.genericError": "哎哟，出错了",
-    "app.presentationUploder.upload.progress": "上传中({0}%)",
+    "app.presentationUploder.rejectedError": "有选中的文件被拒绝了，请检查文件格式。",
+    "app.presentationUploder.upload.progress": "上传中（{0}%）",
     "app.presentationUploder.upload.413": "文件太大，超过了服务器限制",
     "app.presentationUploder.conversion.conversionProcessingSlides": "处理中，第{0}页/共{1}页",
     "app.presentationUploder.conversion.genericConversionStatus": "转换文件中...",
@@ -84,13 +89,15 @@
     "app.waitingMessage": "连接已断开。{0}秒后尝试重新连接...",
     "app.navBar.settingsDropdown.optionsLabel": "选项",
     "app.navBar.settingsDropdown.fullscreenLabel": "全屏显示",
-    "app.navBar.settingsDropdown.settingsLabel": "打开设置",
+    "app.navBar.settingsDropdown.settingsLabel": "设置",
     "app.navBar.settingsDropdown.aboutLabel": "关于",
+    "app.navBar.settingsDropdown.helpLabel": "帮助",
+    "app.navBar.settingsDropdown.helpDesc": "帮助",
     "app.navBar.settingsDropdown.leaveSessionLabel": "注销",
     "app.navBar.settingsDropdown.exitFullscreenLabel": "退出全屏",
     "app.navBar.settingsDropdown.fullscreenDesc": "将设置菜单全屏显示",
     "app.navBar.settingsDropdown.settingsDesc": "更改通用设置",
-    "app.navBar.settingsDropdown.aboutDesc": "显示客户端的信息",
+    "app.navBar.settingsDropdown.aboutDesc": "显示客户端信息",
     "app.navBar.settingsDropdown.leaveSessionDesc": "离开当前会议",
     "app.navBar.settingsDropdown.exitFullscreenDesc": "退出全屏模式",
     "app.navBar.settingsDropdown.hotkeysLabel": "热键",
@@ -104,7 +111,7 @@
     "app.leaveConfirmation.title": "离开会议",
     "app.leaveConfirmation.message": "您要退出此会议吗？",
     "app.leaveConfirmation.confirmLabel": "退出",
-    "app.leaveConfirmation.confirmDesc": "您将从会议退出",
+    "app.leaveConfirmation.confirmDesc": "从会议中退出",
     "app.leaveConfirmation.dismissLabel": "取消",
     "app.leaveConfirmation.dismissDesc": "留在会议中，关闭此对话框",
     "app.leaveConfirmation.endMeetingLabel": "是的并结束会议",
@@ -124,6 +131,8 @@
     "app.actionsBar.raiseLabel": "举手",
     "app.actionsBar.label": "操作栏",
     "app.submenu.application.applicationSectionTitle": "应用",
+    "app.submenu.application.audioAlertLabel": "聊天信息声音提醒",
+    "app.submenu.application.pushAlertLabel": "聊天信息推送提醒",
     "app.submenu.application.fontSizeControlLabel": "字号",
     "app.submenu.application.increaseFontBtnLabel": "增大界面字号",
     "app.submenu.application.decreaseFontBtnLabel": "减小界面字号",
@@ -140,17 +149,17 @@
     "app.submenu.video.videoQualityLabel": "视频质量",
     "app.submenu.video.qualityOptionLabel": "选择视频质量",
     "app.submenu.video.participantsCamLabel": "查看参会者的摄像头",
-    "app.submenu.closedCaptions.closedCaptionsLabel": "隐藏式字幕",
+    "app.submenu.closedCaptions.closedCaptionsLabel": "隐藏字幕",
     "app.submenu.closedCaptions.takeOwnershipLabel": "获取所有者权限",
     "app.submenu.closedCaptions.languageLabel": "语言",
     "app.submenu.closedCaptions.localeOptionLabel": "选择语言",
-    "app.submenu.closedCaptions.noLocaleOptionLabel": "无可用的语言",
+    "app.submenu.closedCaptions.noLocaleOptionLabel": "没有可用的语言",
     "app.submenu.closedCaptions.fontFamilyLabel": "字体",
     "app.submenu.closedCaptions.fontFamilyOptionLabel": "选择字体",
     "app.submenu.closedCaptions.fontSizeLabel": "字号",
     "app.submenu.closedCaptions.fontSizeOptionLabel": "选择字号",
     "app.submenu.closedCaptions.backgroundColorLabel": "背景色",
-    "app.submenu.closedCaptions.fontColorLabel": "字体颜色",
+    "app.submenu.closedCaptions.fontColorLabel": "文字颜色",
     "app.submenu.participants.muteAllLabel": "将演示者以外的人都静音",
     "app.submenu.participants.lockAllLabel": "锁定所有参会者",
     "app.submenu.participants.lockItemLabel": "参会者{0}",
@@ -172,14 +181,14 @@
     "app.settings.applicationTab.label": "应用",
     "app.settings.audioTab.label": "音频",
     "app.settings.videoTab.label": "视频",
-    "app.settings.closedcaptionTab.label": "隐藏式字幕",
+    "app.settings.closedcaptionTab.label": "隱藏字幕",
     "app.settings.usersTab.label": "参会者",
     "app.settings.main.label": "设置",
     "app.settings.main.cancel.label": "取消",
     "app.settings.main.cancel.label.description": "丢弃更改并关闭设置菜单",
     "app.settings.main.save.label": "保存",
     "app.settings.main.save.label.description": "保存更改并关闭设置菜单",
-    "app.settings.dataSavingTab.label": "节省流量",
+    "app.settings.dataSavingTab.label": "节省带宽/流量",
     "app.settings.dataSavingTab.webcam": "启用摄像头",
     "app.settings.dataSavingTab.screenShare": "启用桌面分享",
     "app.settings.dataSavingTab.description": "调整当前显示以节省带宽",
@@ -196,6 +205,7 @@
     "app.actionsBar.actionsDropdown.stopDesktopShareDesc": "停止分享您的桌面演示给",
     "app.actionsBar.actionsDropdown.startRecording": "开始录制",
     "app.actionsBar.actionsDropdown.stopRecording": "停止录制",
+    "app.actionsBar.emojiMenu.statusTriggerLabel": "设置状态",
     "app.actionsBar.emojiMenu.awayLabel": "离开",
     "app.actionsBar.emojiMenu.awayDesc": "更改您的状态为离开",
     "app.actionsBar.emojiMenu.raiseHandLabel": "举手",
@@ -319,6 +329,7 @@
     "app.video.notAllowed": "无权访问摄像头。请确认您已允许浏览器在本会议系统内访问您的摄像头。",
     "app.video.notSupportedError": "为了保证安全和隐私，只能通过HTTPS连接访问摄像头，请确认本会议系统的SSL证书是有效的。",
     "app.video.notReadableError": "无法访问摄像头视频源，请确认您的摄像头未被其他应用占用。",
+    "app.video.mediaServerOffline": "媒体服务器离线。请稍后重试。",
     "app.video.swapCam": "切换",
     "app.video.swapCamDesc": "切换前置/后置摄像头",
     "app.video.videoMenu": "视频菜单",
@@ -339,7 +350,6 @@
     "app.video.stats.rtt": "往返时间",
     "app.video.stats.encodeUsagePercent": "编码usage",
     "app.video.stats.currentDelay": "当前延迟",
-
     "app.meeting.endNotification.ok.label": "确认",
     "app.whiteboard.toolbar.tools": "工具",
     "app.whiteboard.toolbar.tools.pointer": "激光笔",
@@ -370,6 +380,7 @@
     "app.whiteboard.toolbar.multiUserOn": "开启多用户批注模式",
     "app.whiteboard.toolbar.multiUserOff": "关闭多用户批注模式",
     "app.whiteboard.toolbar.fontSize": "字号列表",
+		"app.whiteboard.toolbar.Gift": "礼物",
     "app.feedback.title": "您已从会议中注销",
     "app.feedback.subtitle": "我们希望能听到您对本会议系统的反馈",
     "app.feedback.textarea": "我们怎么能把本会议系统做得更好？",
@@ -379,6 +390,4 @@
     "app.videoDock.webcamFocusDesc": "对焦选中的摄像头",
     "app.videoDock.webcamUnfocusLabel": "取消对焦",
     "app.videoDock.webcamUnfocusDesc": "取消对焦选中的摄像头"
-
 }
-
